--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -17,7 +17,7 @@
     margin-top: 3rem;
     @include flex(row, space-between, center);
   }
-  .findmore{
+  .findmore {
     font-size: 1rem;
   }
   > main {
@@ -29,6 +29,57 @@
 
     &::-webkit-scrollbar {
       display: none;
+    }
+  }
+}
+
+.product-card {
+  width: 18.75rem;
+  height: 25rem;
+  padding: 1rem;
+  flex: none;
+  @include flex(column, flex-start, center, 4px);
+  position: absolute;
+  background-color: white;
+
+  &:hover > div {
+    opacity: 1;
+  }
+
+  img {
+    @include square(calc(18.75rem - 3rem));
+    object-fit: contain;
+    margin: 1rem;
+  }
+
+  span {
+    font-weight: 700;
+    font-size: 1.1rem;
+  }
+
+  > div {
+    opacity: 0;
+    position: absolute;
+    @include square(100%);
+    top: 0;
+    left: 0;
+    background-color: #0000006b;
+    @include flex;
+
+    button {
+      @include flex;
+      @include square(3rem);
+      border-radius: 100%;
+      border: none;
+      background-color: $color3;
+      cursor: pointer;
+      color: $color1;
+      font-size: 1.1rem;
+      transition: all 0.3s;
+
+      &:hover {
+        rotate: 20deg;
+      }
     }
   }
 }
