btn mixin added

--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -35,6 +35,7 @@ $color3: #76abae;
 @import "admin-styles/mixin";
 @import "home";
 @import "cart";
+@import "shipping";
 
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
