--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -37,6 +37,7 @@ $color3: #76abae;
 @import "cart";
 @import "shipping";
 @import "login";
+@import "search";
 
 @import "admin-styles/dashboard";
 @import "admin-styles/products";
