--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -7,8 +7,9 @@
 
   > section {
     width: 100%;
-    height: 20rem;
+    height: 10rem;
     margin: auto;
+    // overflow-x: auto;
     background: url("../assets/cover.jpg") no-repeat center / cover;
   }
 
