--- a/frontend/src/styles/app.scss
+++ b/frontend/src/styles/app.scss
@@ -103,6 +103,13 @@ $color3: #76abae;
 }
 
 // ********************************
+.not-found {
+  height: 80vh;
+  @include flex(column);
+  > svg {
+    font-size: 6rem;
+  }
+}
 
 .admin-container {
   @include grid(1fr 4fr, 2rem);
