--- a/frontend/src/styles/_home.scss
+++ b/frontend/src/styles/_home.scss
@@ -1,16 +1,15 @@
 .home {
   padding: 2rem 5%;
-  display: flex;
-  flex-direction: column;
-  height: calc(100vh - 4rem);
+  height: calc(100vh - 6.5rem);
   width: 100%;
 
   > section {
     width: 100%;
-    height: 10rem;
+    height: 50%;
+    min-height: 20%;
     margin: auto;
-    // overflow-x: auto;
     background: url("../assets/cover.jpg") no-repeat center / cover;
+    background-size: contain;
   }
 
   > h1 {
@@ -23,11 +22,9 @@
   }
   > main {
     width: 100%;
-    flex: 1;
-    display: flex;
+    @include flex(row, flex-start, stretch, 2rem);
     gap: 1rem;
-    overflow-x: auto;
-
+    flex-wrap: wrap;
     &::-webkit-scrollbar {
       display: none;
     }
@@ -46,7 +43,6 @@
   &:hover > div {
     opacity: 1;
   }
-
   img {
     @include square(calc(18.75rem - 3rem));
     object-fit: contain;
