--- a/frontend/src/styles/admin-styles/_products.scss
+++ b/frontend/src/styles/admin-styles/_products.scss
@@ -146,7 +146,7 @@
       font-weight: 700;
     }
     > p {
-      margin: 0.5rem;
+      margin: auto;
     }
     > .shipping-btn {
       margin: 2rem 0;
